--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,41 @@
-machine:
-    python:
-        version: pypy-3.6.5
+version: 2
+
+jobs:
+  build:
+
+    working_directory: ~/opt
+    docker:
+      - image: circleci/python:3.6.5
+
+    steps:
+      - checkout
+      -   restore_cache:
+          key: deps1-{{ .Branch }}--{{ checksum "requirements.txt" }}
+
+      - run:
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+
+      - save_cache:
+          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv"
+
+      - install_deps:
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+
+      - run:
+          command: |
+            . /venv/bin/activate
+            ./cc-test-reporter before-build
+            python runtests.py
+            ./cc-test-reporter after-build --coverage-input-type coverage.py --exit-code $?
+
+workflows:
+  build:
+    jobs:
+      - build
