--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
             ./cc-test-reporter after-build --coverage-input-type coverage.py --exit-code $?
 
 workflows:
+  version: 2
   build:
     jobs:
       - build
