--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,30 +9,23 @@ jobs:
 
     steps:
       - checkout
-      -   restore_cache:
-          key: deps1-{{ .Branch }}--{{ checksum "requirements.txt" }}
-
       - run:
           command: |
-            python3 -m venv venv
+            python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
 
-      - save_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-          paths:
-            - "venv"
-
-      - install_deps:
+      - run:
           command: |
             curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
             chmod +x ./cc-test-reporter
 
       - run:
           command: |
-            . /venv/bin/activate
+            . venv/bin/activate
             ./cc-test-reporter before-build
-            python runtests.py
+            coverage run runtests.py
+            coverage report -m
             ./cc-test-reporter after-build --coverage-input-type coverage.py --exit-code $?
 
 workflows:
