--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             . venv/bin/activate
             ./cc-test-reporter before-build
             coverage run runtests.py
-            coverage report -m
+            coverage xml
             ./cc-test-reporter after-build --coverage-input-type coverage.py --exit-code $?
 
 workflows:
